style.css
body {
	display: flex;
	flex-direction: column;
	font-family: arial;
	padding: 0;
	margin: 0;
}

.header, .billboard, .footer {
	background-color: #1F2937;
	color: #F9FAF8;
}

.header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 10px 100px;
}

.header .logo {
	font-size: 24px;
	font-weight: bold;
}

.content{
	display: flex;
	flex-direction: column;
	margin: 0;
	padding: 0;
}

.billboard {
	display: flex;
	justify-content: space-between;
	padding: 80px 100px;
}

.hero-block {
	max-width: 50%;
	flex: auto;
	flex-direction: column;
}

.hero-title {
	font-size: 48px;
	font-weight: 900;
	margin: 0;
}

.hero-subtitle {
	margin: 0px;
	font-size: 18px;
	color: #E5E7EB;
}

.hero-img {
	background-color: gray;
	flex: auto;
	display: flex;
	justify-content: center;
	align-items: center;
}

ul {
	display: flex;
	margin: 0;
	padding: 0;
	justify-content: space-between;
	align-items: center;
	gap: 15px;
}

li {
	color: #E5E7EB;
	list-style-type: none;
}

button {
	background-color: #3882F6;
	color: #F9FAF8;
	border: 0px;
	border-radius: 4px;
	outline: none;
	font-weight: 650px;
	font-size: 18px;
	margin: 5px 0px;
	padding: 5px 25px;
}

.info {
	display: flex;
	flex-direction: column;
}

.info-title {
	font-size: 36px;
	font-weight: 900;
	color: #1F2937;
	text-align: center;
	padding: 0;
}

.info-cards {
	display: flex;
	justify-content: center;
	gap: 80px;
	padding: 0px 40px;
	flex-flow: wrap;
}

.card {
	display: flex;
	flex-direction: column;
	align-items: center;
	max-width: 150px;
	flex: auto;
}

.card-img {
	border: 3px solid #3882F6;
	border-radius: 10px;
	margin: 0;
	min-width: 150px;
	min-height: 150px;
	flex: auto;
}

.card-txt {
	margin: 5px 0px;
	padding: 0;
	text-align: center;
}

.quote {
	background-color: #E5E7EB;
	padding: 40px 300px;
	margin-top: 80px;
}

.quote-txt {
	font-size: 36px;
	font-weight: 300;
	font-style: italic;
	color: #1F2937;
}

.quote-author {
	text-align: right;
	font-weight: 900;
}

.signup {
	display: flex;
	background-color: #3882F6;
	margin: 50px 100px;
	border-radius: 6px;
	color: #F9FAF8;
	justify-content: space-between;
	align-items: center;
}

.signup-txt {
	padding: 10px 100px;
}

.signup-title {
	font-size: 24px;
	font-weight: bold;
}

.signup-subtitle {
	color: black;
	margin-top: -20px;
}

.signup-button {
	border: 2px solid white;
	margin: 10px 100px;
}

.footer {
	text-align: center;
	padding: 30px;
}

